Add CRUD  roles, add and remove users from roles, pagination helper, change layout to views

--- a/GestionAcademica/GestionAcademica.csproj
+++ b/GestionAcademica/GestionAcademica.csproj
@@ -52,4 +52,9 @@
     <Content Remove="wwwroot\lib\fontawesome-free\webfonts\fa-brands-400.ttf" />
     <Content Remove="wwwroot\lib\fontawesome-free\webfonts\fa-regular-400.eot" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Role\" />
+    <Folder Include="TagHelpers\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
 </Project>
