Config forms, add initial valdiatión forms for login and register, config pages identity

--- a/GestionAcademica/GestionAcademica.csproj
+++ b/GestionAcademica/GestionAcademica.csproj
@@ -56,5 +56,6 @@
     <Folder Include="Views\Role\" />
     <Folder Include="TagHelpers\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 </Project>
